#76: Fixed Javadoc errors with invisible modules.